<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GalleryDemoActivity" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <Button
            android:id="@+id/btn_effect01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fly_in_locale" />

        <Button
            android:id="@+id/btn_effect02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fly_in_kuaipan" />

        <Button
            android:id="@+id/btn_effect03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fade_in_locale" />

        <Button
            android:id="@+id/btn_effect04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fade_in_kuaipan" />

        <Button
            android:id="@+id/btn_effect05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate_locale" />

        <Button
            android:id="@+id/btn_effect06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate_kuaipan" />
    </LinearLayout>

</RelativeLayout>